--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rt-sched-analysis"
+name = "response-time-analysis"
 version = "0.1.0"
 authors = ["Björn Brandenburg <bbb@mpi-sws.org>"]
 edition = "2018"
