--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,18 @@
 [package]
 name = "response-time-analysis"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Björn Brandenburg <bbb@mpi-sws.org>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+edition = "2021"
+license = "MIT"
+categories = ["science", "science::robotics", "algorithms"]
+repository = "https://github.com/brandenburg/response-time-analysis-rs"
+description = "Definitions and algorithms for response-time analysis of real-time systems"
 
 [dependencies]
-assert_approx_eq = "1.1.0"
-itertools = "0.10.1"
-auto_impl = "0.4.1"
-thiserror = "1.0.26"
+itertools = "0.10.3"
+auto_impl = "1.0.1"
+thiserror = "1.0.31"
 derive_more = "0.99.16"
+
+[dev-dependencies]
+assert_approx_eq = "1.1.0"
